2011-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved the PAGE_STATUS function, resolves #32327

2011-08-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Image resource type should not override configured "file" property, resolves #29302

2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2011-07-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Image type should not override configured "file" property, resolves #28520

2010-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release