@@ -1,6 +1,7 @@
 2011-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Improved the PAGE_STATUS function, resolves #32327
+	* Corrected spelling mistake in file of class tx_templatedisplay_ajax, resolves #32335
 
 2011-08-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
